--- a/docs/package.json
+++ b/docs/package.json
@@ -13,6 +13,7 @@
     "@astrojs/sitemap": "^3.5.0",
     "@astrojs/starlight": "^0.35.2",
     "@webtui/css": "^0.1.4",
+    "@webtui/theme-nord": "^0.0.2",
     "astro": "^5.6.1",
     "sharp": "^0.34.2"
   }
