--- a/docs/package.json
+++ b/docs/package.json
@@ -15,6 +15,11 @@
     "@webtui/css": "^0.1.4",
     "@webtui/theme-nord": "^0.0.2",
     "astro": "^5.6.1",
-    "sharp": "^0.34.2"
+    "sharp": "^0.34.2",
+    "starlight-contributor-list": "^0.3.0",
+    "starlight-llms-txt": "^0.6.0"
+  },
+  "devDependencies": {
+    "astro-vtbot": "^2.1.7"
   }
 }
