--- a/pyproject.toml
+++ b/pyproject.toml
@@ -24,6 +24,7 @@ dependencies = [
   "pillow>=11.2.1",
   "platformdirs>=4.3.8",
   "psutil>=7.0.0",
+  "rarfile>=4.2",
   "send2trash>=1.8.3",
   "textual-autocomplete>=4.0.4",
   "textual-image[textual]>=0.8.2",
