some minor fixes

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -152,7 +152,7 @@ hist_previous = ["backspace", "u"]
 hist_next = ["space"]
 toggle_visual = ["v"]
 toggle_all = ["%", "ctrl+a"]
-toggle_hidden_files = ["ctrl+full_stop"]
+toggle_hidden_files = ["full_stop"]
 select_up = ["shift+up", "K"]
 select_down = ["shift+down", "J"]
 select_page_up = ["shift+pageup"]
