feat: Scores in zoxide

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -169,6 +169,7 @@ preview_select_right = ["shift+right", "L"]
 [plugins.zoxide]
 enabled = false
 keybinds = ["z"]
+show_scores = false
 
 [plugins.bat]
 enabled = false
