feat: compact_mode

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -14,6 +14,8 @@ preview_error = "Hmm, I think this file got corrupted (or maybe not?)"
 preview_binary = "This file is not UTF-8 encoded, so I decline to read it."
 preview_start = "print(\"Hello, world!\")"
 
+compact_mode = false
+
 [interface.clock]
 enabled = true
 align = "left"
