feat(app): allow finding files and directories with fd (#117)
Co-authored-by: NSPC911 <87571998+NSPC911@users.noreply.github.com>

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -189,3 +189,10 @@ enabled = false
 file_executable = "nano"
 folder_executable = "code"
 keybinds = ["e"]
+
+[plugins.finder]
+enabled = false
+keybinds = ["f"]
+executable = "fd"
+relative_paths = true
+follow_symlinks = false
