--- a/pyproject.toml
+++ b/pyproject.toml
@@ -71,6 +71,10 @@ log = "textual console -x WORKER -x SYSTEM -x DEBUG -x EVENT"
 "gen-schema" = "docs/scripts/generate_schema.py"
 "icon-test" = "docs/scripts/icon_test.py"
 "gen-keys" = "docs/scripts/generate_keybinds.py"
+check.sequence = [
+  { cmd = "ty check" },
+  { cmd = "ruff check" }
+]
 
 [tool.ruff.lint]
 select = [
@@ -101,5 +105,5 @@ preview = true
 
 
 [tool.ty.rules]
-possibly-unbound-import = "ignore"
+possibly-missing-import = "ignore"
 unresolved-attribute = "ignore"
