--- a/pyproject.toml
+++ b/pyproject.toml
@@ -3,7 +3,7 @@ name = "rovr"
 version = "0.3.0"
 description = "A post-modern terminal file explorer"
 readme = "README.md"
-requires-python = ">= 3.13"
+requires-python = ">=3.12, <3.14"
 license = { text = "MIT" }
 authors = [{ name = "NSPC911" }]
 keywords = ["filemanager", "fs", "python", "textual", "tui"]
@@ -53,8 +53,8 @@ dev = [
 ]
 
 [build-system]
-requires = ["hatchling"]
-build-backend = "hatchling.build"
+requires = ["uv_build>=0.9.0,<0.10.0"]
+build-backend = "uv_build"
 
 [tool.commitizen]
 name = "cz_conventional_commits"
