--- a/pyproject.toml
+++ b/pyproject.toml
@@ -16,7 +16,6 @@ classifiers = [
   "Topic :: Utilities",
 ]
 dependencies = [
-  "click>=8.2.1",
   "humanize>=4.12.3",
   "jsonschema>=4.25.0",
   "lzstring>=1.0.4",
@@ -25,6 +24,7 @@ dependencies = [
   "platformdirs>=4.3.8",
   "psutil>=7.0.0",
   "rarfile>=4.2",
+  "rich-click>=1.9.3",
   "send2trash>=1.8.3",
   "textual-autocomplete>=4.0.4",
   "textual-image[textual]>=0.8.2",
