--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -173,6 +173,8 @@ preview_scroll_right = ["right", "l"]
 preview_select_left = ["shift+left", "H"]
 preview_select_right = ["shift+right", "L"]
 show_keybinds = ["question_mark"]
+quit_app = ["q", "ctrl+q"]
+command_palette = "ctrl+p"
 
 [plugins.zoxide]
 enabled = false
