chore: add format as a poe task

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -75,6 +75,7 @@ check.sequence = [
   { cmd = "ty check" },
   { cmd = "ruff check" }
 ]
+format = "ruff format --preview"
 
 [tool.ruff.lint]
 select = [
