--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -8,11 +8,13 @@ use_reactive_layout = true
 show_progress_eta = false
 show_progress_percentage = true
 truncate_progress_file_path = false
-preview_error = "Hmm, I think this file got corrupted (or maybe not?)"
-preview_binary = "This file is not UTF-8 encoded, so I decline to read it."
-preview_start = "print(\"Hello, world!\")"
 compact_mode = false
 show_line_numbers = true
+
+[interface.preview_text]
+error = "Couldn't read this file! (\u00AC_\u00AC)"
+binary = "The file doesn't use UTF-8\n which isn't supported yet"
+start = " ___ ___\n|  _| . |\n|_| |___|\n _ _ ___\n| | |  _|\n \\_/|_|\n"
 
 [interface.clock]
 enabled = true
