--- a/pyproject.toml
+++ b/pyproject.toml
@@ -74,9 +74,9 @@ log = "textual console -x WORKER -x SYSTEM -x DEBUG -x EVENT"
 "gen-keys" = "docs/scripts/generate_keybinds.py"
 check.sequence = [
   { cmd = "ty check" },
-  { cmd = "ruff check --unsafe-fixes" }
+  { cmd = "ruff check" }
 ]
-format = "ruff format --preview"
+format = "ruff check --unsafe-fixes --fix"
 
 [tool.ruff.lint]
 select = [
