--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -33,11 +33,11 @@ jobs:
         run: uv sync
 
       - name: Run ty
-        run: uvx ty check || (echo "::error::Type checking failed! Please fix type errors before committing." && exit 1)
+        run: uv run ty check || (echo "::error::Type checking failed! Please fix type errors before committing." && exit 1)
 
       - name: Run ruff format if needed (main repo)
         if: github.repository == env.MAIN_REPO && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false)
-        run: uvx ruff format .
+        run: uv run ruff format .
 
       - name: Commit and push changes if needed (main repo)
         if: github.repository == env.MAIN_REPO && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false)
