--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -10,11 +10,14 @@ show_progress_percentage = true
 truncate_progress_file_path = false
 compact_mode = false
 show_line_numbers = true
+# yazi style is 5
+scrolloff = 5
 
 [interface.preview_text]
 error = "couldn't read this file! (\u00AC_\u00AC)" # ¬_¬
 binary = "the file doesn't use UTF-8, which isn't supported yet"
-start = """  ___ ___
+start = """
+  ___ ___
  |  _| . |
  |_| |___|
   _ _ ___
