--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -69,7 +69,7 @@ jobs:
         run: uv sync
 
       - name: Run ty
-        run: uvx ty check || (echo "::error::Type checking failed! Please fix type errors before committing." && exit 1)
+        run: uv run ty check || (echo "::error::Type checking failed! Please fix type errors before committing." && exit 1)
 
       # If on a fork, only check and fail if there are issues (no fixes/commits)
       - name: Run ruff
