--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,7 @@ classifiers = [
 dependencies = [
   "humanize>=4.12.3",
   "jsonschema>=4.25.0",
+  "natsort>=8.4.0",
   "pathvalidate>=3.3.1",
   "pillow>=11.2.1",
   "platformdirs>=4.3.8",
