--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -174,6 +174,7 @@ preview_scroll_right = ["right", "l"]
 preview_select_left = ["shift+left", "H"]
 preview_select_right = ["shift+right", "L"]
 show_keybinds = ["question_mark"]
+change_sort_order = ["comma"]
 quit_app = ["q", "ctrl+q"]
 command_palette = "ctrl+p"
 suspend_app = ["ctrl+z"]
