fix(keybinds): set default to focus processes to #

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -136,7 +136,7 @@ focus_file_list = ["escape"]
 focus_toggle_preview_sidebar = ["i"]
 focus_toggle_path_switcher = ["ctrl+l"]
 focus_search = ["ctrl+f", "slash"]
-focus_toggle_processes = ["f6"]
+focus_toggle_processes = ["number_sign"]
 focus_toggle_clipboard = ["c"]
 focus_toggle_metadata = ["m"]
 copy = ["y", "ctrl+c"]
