feat: add config on whether to suspend when opening editor

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -196,6 +196,8 @@ executable = "bat"
 enabled = true
 file_executable = ""
 folder_executable = ""
+file_suspend = true
+folder_suspend = true
 keybinds = ["e"]
 
 [plugins.finder]
