feat: add pdf previewing with poppler (#153)
4th times the charm i guess, this took quite some time


<!-- This is an auto-generated comment: release notes by coderabbit.ai
-->

## Summary by CodeRabbit

## Release Notes

* **New Features**
* Added PDF preview support with interactive page navigation via
scrolling and keyboard shortcuts
* Poppler plugin is now configurable with adjustable thread count and
tool location settings
* Automatic detection and configuration of Poppler dependencies at
startup

<sub>✏️ Tip: You can customize this high-level summary in your review
settings.</sub>

<!-- end of auto-generated comment: release notes by coderabbit.ai -->

---------

Co-authored-by: NSPBot911 <176916861+NSPBot911@users.noreply.github.com>

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -206,3 +206,9 @@ keybinds = ["f"]
 executable = "fd"
 relative_paths = true
 follow_symlinks = false
+
+[plugins.poppler]
+enabled = true
+threads = 1
+use_pdftocairo = false
+poppler_folder = ""
