feat(editor): open all files in editor config

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -198,6 +198,7 @@ file_executable = ""
 folder_executable = ""
 file_suspend = true
 folder_suspend = true
+open_all_in_editor = false
 keybinds = ["e"]
 
 [plugins.finder]
