ci: update workflow generators

--- a/.github/workflows/formatting.yml
+++ b/.github/workflows/formatting.yml
@@ -37,7 +37,9 @@ jobs:
 
       - name: Run ruff format if needed (main repo)
         if: github.repository == env.MAIN_REPO && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false)
-        run: uv run ruff format .
+        run: |
+          uv run ruff format .
+          uv run ruff check --fix --unsafe-fixes
 
       - name: Commit and push changes if needed (main repo)
         if: github.repository == env.MAIN_REPO && (github.event_name != 'pull_request' || github.event.pull_request.head.repo.fork == false)
@@ -46,7 +48,7 @@ jobs:
           git config --global user.email "${GITHUB_ACTOR_EMAIL:-176916861+NSPBot911@users.noreply.github.com}"
           git add .
           if ! git diff --cached --quiet; then
-            git commit -m "style: auto-format with ruff"
+            git commit -m "style: auto-format with ruff" -m "[skip ci]" -m "$(git log -1 --pretty=format:'%an') forgot to run ruff format" -m "skip-checks: true"
             git push
           fi
         env:
