--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -213,3 +213,19 @@ enabled = true
 threads = 1
 use_pdftocairo = false
 poppler_folder = ""
+
+[plugins.file_one]
+enabled = true
+
+[plugins.file_one.mime_rules]
+"text/*" = "text"
+"image/*" = "image"
+"application/pdf" = "pdf"
+"application/zip" = "archive"
+"application/x-tar" = "archive"
+"application/gzip" = "archive"
+"application/x-bzip2" = "archive"
+"application/x-xz" = "archive"
+"application/x-rar" = "archive"
+"application/x-7z-compressed" = "archive"
+"inode/directory" = "folder"
