--- a/pyproject.toml
+++ b/pyproject.toml
@@ -27,11 +27,10 @@ dependencies = [
   "rarfile>=4.2",
   "rich-click>=1.9.3",
   "send2trash>=1.8.3",
-  "textual[syntax]~=6.6.0",
+  "textual~=6.6.0",
   "textual-autocomplete>=4.0.6",
   "textual-image[textual]>=0.8.4",
   "toml>=0.10.2",
-  "tree-sitter>=0.25.0",
   "ujson>=5.11.0",
 ]
 
