not sure what im doing, help

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -177,11 +177,34 @@ preview_scroll_left = ["left", "h"]
 preview_scroll_right = ["right", "l"]
 preview_select_left = ["shift+left", "H"]
 preview_select_right = ["shift+right", "L"]
-show_keybinds = ["question_mark"]
-change_sort_order = ["comma"]
+show_keybinds = ["?"]
+change_sort_order = ["\u002c"]
 quit_app = ["q", "ctrl+q"]
 command_palette = "ctrl+p"
 suspend_app = ["ctrl+z"]
+[keybinds.delete_files]
+trash = ["d"]
+delete = ["x"]
+cancel = ["c", "escape"]
+[keybinds.filename_conflict]
+overwrite = ["o"]
+skip = ["s"]
+rename = ["r"]
+cancel = ["c", "escape"]
+dont_ask_again = ["a"]
+[keybinds.file_in_use]
+retry = ["r"]
+skip = ["s"]
+cancel = ["c", "escape"]
+dont_ask_again = ["a"]
+[keybinds.filter_modal]
+exit = ["escape"]
+down = ["down", "ctrl+j"]
+up = ["up", "ctrl+k"]
+[keybinds.yes_or_no]
+yes = ["y"]
+no = ["n", "escape"]
+dont_ask_again = ["a"]
 
 [plugins.zoxide]
 enabled = true
