--- a/pyproject.toml
+++ b/pyproject.toml
@@ -30,7 +30,7 @@ dependencies = [
   "textual~=6.6.0",
   "textual-autocomplete>=4.0.6",
   "textual-image[textual]>=0.8.4",
-  "toml>=0.10.2",
+  "tomli>=2.3.0",
   "ujson>=5.11.0",
 ]
 
