feat(fd)!: rename all references of 'finder' to 'fd'

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -224,7 +224,7 @@ folder_suspend = true
 open_all_in_editor = false
 keybinds = ["e"]
 
-[plugins.finder]
+[plugins.fd]
 enabled = true
 keybinds = ["f"]
 executable = "fd"
