--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -231,6 +231,7 @@ executable = "fd"
 relative_paths = true
 follow_symlinks = false
 no_ignore_parent = false
+default_filter_types = ["file", "directory"]
 
 [plugins.poppler]
 enabled = true
