build(pip): add textual-speedups optionally

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -51,6 +51,9 @@ dev = [
   "textual-dev>=1.7.0",
   "ty==0.0.1a28",
 ]
+speedups = [
+    "textual-speedups>=0.2.1",
+]
 
 [build-system]
 requires = ["uv_build>=0.9.0,<0.10.0"]
