--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [project]
 name = "rovr"
-version = "0.6.0.dev2"
+version = "0.6.0rc1"
 description = "A post-modern terminal file explorer"
 readme = "README.md"
 requires-python = ">=3.12, <3.14"
@@ -27,7 +27,7 @@ dependencies = [
   "rarfile>=4.2",
   "rich-click>=1.9.3",
   "send2trash>=1.8.3",
-  "textual~=6.6.0",
+  "textual~=6.8.0",
   "textual-autocomplete>=4.0.6",
   "textual-image[textual]>=0.8.4",
   "tomli>=2.3.0",
