--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -178,10 +178,18 @@ preview_scroll_right = ["right", "l"]
 preview_select_left = ["shift+left", "H"]
 preview_select_right = ["shift+right", "L"]
 show_keybinds = ["?"]
-change_sort_order = [","]
 quit_app = ["q", "ctrl+q"]
 command_palette = "ctrl+p"
 suspend_app = ["ctrl+z"]
+[keybinds.change_sort_order]
+open_popup = [","]
+name = ["a"]
+extension = ["e"]
+natural = ["n"]
+size = ["s"]
+created = ["c"]
+modified = ["m"]
+descending = ["d"]
 [keybinds.delete_files]
 trash = ["d"]
 delete = ["x"]
