--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -135,7 +135,7 @@ focus_toggle_pinned_sidebar = ["s"]
 focus_file_list = ["escape"]
 focus_toggle_preview_sidebar = ["i"]
 focus_toggle_path_switcher = ["ctrl+l"]
-focus_search = ["ctrl+f", "slash"]
+focus_search = ["slash"]
 focus_toggle_processes = ["#"]
 focus_toggle_clipboard = ["c"]
 focus_toggle_metadata = ["m"]
