--- a/docs/package.json
+++ b/docs/package.json
@@ -16,8 +16,7 @@
     "astro-mermaid": "^1.1.0",
     "mermaid": "^11.12.1",
     "sharp": "^0.34.4",
-    "starlight-contributor-list": "^0.3.0",
-    "starlight-llms-txt": "^0.6.0"
+    "starlight-contributor-list": "^0.3.0"
   },
   "devDependencies": {
     "astro-vtbot": "^2.1.9"
