--- a/pyproject.toml
+++ b/pyproject.toml
@@ -49,6 +49,7 @@ rovr = "rovr:main"
 [dependency-groups]
 dev = [
   "json-schema-for-humans>=1.5.1",
+  "nuitka>=2.8.9",
   "poethepoet>=0.38.0",
   "prek>=0.2.25",
   "ruff>=0.14.10",
