--- a/docs/package.json
+++ b/docs/package.json
@@ -11,14 +11,17 @@
   },
   "dependencies": {
     "@astrojs/sitemap": "^3.6.0",
-    "@astrojs/starlight": "^0.36.1",
-    "astro": "^5.15.9",
-    "astro-mermaid": "^1.1.0",
-    "mermaid": "^11.12.1",
-    "sharp": "^0.34.4",
-    "starlight-contributor-list": "^0.3.0"
+    "@astrojs/starlight": "^0.37.1",
+    "astro": "^5.16.6",
+    "astro-mermaid": "^1.2.0",
+    "mermaid": "^11.12.2",
+    "sharp": "^0.34.5",
+    "starlight-contributor-list": "^0.3.1"
   },
   "devDependencies": {
     "astro-vtbot": "^2.1.9"
+  },
+  "overrides": {
+    "@anthropic-ai/claude-code": "./__EXCLUDE"
   }
 }
