--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,7 @@ dependencies = [
   "pillow>=12.0.0",
   "platformdirs>=4.5.0",
   "psutil>=7.1.0",
-  "puremagic~=1.30",
+  "puremagic==1.30",
   "rarfile>=4.2",
   "rich-click>=1.9.3",
   "send2trash>=1.8.3",
@@ -51,7 +51,7 @@ dev = [
   "poethepoet>=0.38.0",
   "ruff>=0.14.6",
   "textual-dev>=1.7.0",
-  "ty~=0.0.3",
+  "ty==0.0.3",
 ]
 speedups = [
     "textual-speedups>=0.2.1",
