fix(mime): add gzip and bzip properly

--- a/src/rovr/config/config.toml
+++ b/src/rovr/config/config.toml
@@ -47,8 +47,11 @@ panels = false
 "image/*" = "image"
 "application/pdf" = "pdf"
 "application/zip" = "archive"
-"application/x-tar" = "archive"
 "application/gzip" = "archive"
+"application/bzip2" = "archive"
+"application/xz" = "archive"
+"application/x-tar" = "archive"
+"application/x-gzip" = "archive"
 "application/x-bzip2" = "archive"
 "application/x-xz" = "archive"
 "application/x-rar" = "archive"
