--- a/pyproject.toml
+++ b/pyproject.toml
@@ -4,7 +4,8 @@ version = "0.6.0"
 description = "A post-modern terminal file explorer"
 readme = "README.md"
 requires-python = ">=3.12, <3.14"
-license = { text = "MIT" }
+license = "MIT"
+license-files = [ "LICENSE" ]
 authors = [{ name = "NSPC911" }]
 keywords = ["filemanager", "fs", "python", "textual", "tui"]
 classifiers = [
