--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,7 +9,7 @@ license-files = [ "LICENSE" ]
 authors = [{ name = "NSPC911" }]
 keywords = ["filemanager", "fs", "python", "textual", "tui"]
 classifiers = [
-  "Development Status :: 2 - Pre-Alpha",
+  "Development Status :: 4 - Beta",
   "License :: OSI Approved :: MIT License",
   "Programming Language :: Python :: 3.13",
   # "Framework :: Textual", # I highly believe textual deserves its own category
