--- a/pyproject.toml
+++ b/pyproject.toml
@@ -43,7 +43,7 @@ Source = "https://github.com/NSPC911/rovr"
 Documentation = "https://nspc911.github.io/rovr"
 
 [project.scripts]
-rovr = "rovr.__main__:main"
+rovr = "rovr:main"
 
 [dependency-groups]
 dev = [
@@ -71,7 +71,7 @@ update_changelog_on_bump = true
 major_version_zero = true
 
 [tool.poe.tasks]
-dev = "textual run --dev rovr.__main__:main"
+dev = "textual run --dev rovr.__main__:cli"
 run = "rovr"
 log = "textual console -x WORKER -x SYSTEM -x DEBUG -x EVENT"
 "gen-schema" = "docs/scripts/generate_schema.py"
@@ -102,7 +102,7 @@ select = [
   "TD",
   "W",
 ]
-ignore = ["W505", "E501", "ANN002", "ANN003", "TD002", "TD003"]
+ignore = ["W505", "E501", "ANN002", "ANN003", "TD002", "TD003", "ANN401"]
 preview = true
 
 [tool.ruff.format]
