fix: resolve CI type-checker and Python 3.13 test failures
- Exclude tests/**/* from ty type-checker to avoid pytest import errors in CI

- Wrap MetadataContainer queries with suppress(NoMatches) to fix race condition during app startup on Python 3.13

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -119,8 +119,9 @@ preview = true
 
 [tool.ty.src]
 exclude = [
-  "src/rovr/classes/archive.py"
-] # i dont want to add type indicators
+  "src/rovr/classes/archive.py",
+  "tests/**/*"
+] # i dont want to add type indicators; exclude tests since pytest may not be installed
 
 [tool.ty.rules]
 # possibly-missing-import = "ignore"
