put me up for adoption thanks

--- a/src/rovr/config/keybinds/vim.toml
+++ b/src/rovr/config/keybinds/vim.toml
@@ -44,8 +44,8 @@ select_page_up = ["shift+pageup"]
 select_page_down = ["shift+pagedown"]
 select_home = ["shift+home"]
 select_end = ["shift+end"]
-tab_next = ["ctrl+j", "gt"]
-tab_previous = ["ctrl+k", "gT"]
+tab_next = ["ctrl+j"]
+tab_previous = ["ctrl+k"]
 tab_new = ["n"]
 tab_close = ["w"]
 preview_scroll_left = ["h", "left"]
