--- a/pyproject.toml
+++ b/pyproject.toml
@@ -69,6 +69,9 @@ build-backend = "uv_build"
 [tool.uv]
 compile-bytecode = true
 
+[tool.uv.sources]
+nuitka = { git = "https://github.com/Nuitka/Nuitka", rev = "factory" }
+
 [tool.commitizen]
 name = "cz_conventional_commits"
 tag_format = "$version"
